--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <dl style="display:grid;gap:8px">
               <div><strong>Location:</strong> Ahemdabad</div>
               <div><strong>Email:</strong> <a href="mailto:your.email@example.com">yashbharodiya27@gmail.com</a></div>
-              <div><strong>Resume:</strong> <a href="index.pdf" download>Click</a></div>
+              <div><strong>Resume:</strong> <a href="resume.pdf" download>Click</a></div>
             </dl>
             <hr style="border:none;border-top:1px solid rgba(255,255,255,0.03);margin:12px 0">
             <div><strong>Quick stats</strong></div>
